# ctf-copilot

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
ctf_copilot/: __init__.py  cli.py
ctf_copilot/commands/: __init__.py  log_cmd.py  wrap_cmd.py
ctf_copilot/core/: __init__.py  config.py  context.py  database.py  keyring.py  logger.py  notes.py  observations.py  session.py  vault.py
ctf_copilot/engine/: __init__.py  ai.py  cve.py  hints.py  pattern.py  writeup.py
ctf_copilot/interface/: __init__.py  dashboard.py  display.py  repl.py  setup_wizard.py
ctf_copilot/parsers/: __init__.py  base.py  dirsearch_parser.py  ffuf_parser.py  gobuster_parser.py  nmap_parser.py  registry.py  searchsploit_parser.py
ctf_copilot/rules/: compound.yaml  services.yaml  web.yaml
hooks/: bash_hook.sh  ctf-init.sh  zsh_hook.zsh
tests/: conftest.py  test_hints.py  test_logger.py  test_parsers.py  test_pattern_engine.py  test_writeup.py
